# libshjpeg

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  shjpeg.pc.in
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  shjpegshow.1  shjpegtest.1  v2mjpeg.1
include/: Makefile.am
include/shjpeg/: Makefile.am  Makefile.in  shjpeg.h  shjpeg_types.h
src/: Makefile.am  Makefile.in  shjpeg.h  shjpeg_common.c  shjpeg_config.c  shjpeg_decode.c  shjpeg_encode.c  shjpeg_internal.h  shjpeg_jpu.c  shjpeg_jpu.h  shjpeg_regs.h  shjpeg_types.h  shjpeg_utils.h  shjpeg_veu.c  shjpeg_veu.h
tests/: Makefile.am  Makefile.in  mjpeg2jpeg.pl  shjpegshow.c  shjpegtest.c  v2mjpeg.c
